Embed a favorite tweet in tweets.html
Added an embedded tweet to showcase a favorite tweet. week3question2. Make a cool other webpage

--- a/html_basic/html_basic/tweets.html
+++ b/html_basic/html_basic/tweets.html
@@ -38,5 +38,21 @@
 
   <!-- Link to Tweets Page -->
   <a href="tweets.html">Check out my Tweets</a>
+
+    <h1>My Tweets</h1>
+
+  <p>Here’s one of my favorite tweets!</p>
+
+  <!-- Embedded Tweet -->
+  <blockquote class="twitter-tweet">
+    <p lang="en" dir="ltr">
+      “Learning to code is like learning superpowers — you can build *anything!* 🚀 #HTML #CSS #WebDev”
+    </p>
+    &mdash; Example Developer (@example)
+    <a href="https://twitter.com/example/status/1234567890123456789">March 1, 2025</a>
+  </blockquote>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <br>
 </body>
 </html>
