Update links and text in tweets.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -24,12 +24,14 @@
   <br><br>
 
   <!-- Link to Tweets Page -->
-  <a href="tweets.html">Check out my Tweets</a> 
+  <a href="tweets.html">Check out my Tweets →</a>  
   <h1>My Tweets</h1>
 
   <!-- Embedded Tweet -->
   <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Learning HTML is fun and powerful! #WebDevelopment</p>
+    <p lang="en" dir="ltr">
+      Learning HTML is fun and powerful! #WebDevelopment
+    </p>
     &mdash; Example User (@example)
     <a href="https://twitter.com/example/status/1234567890123456789">March 1, 2025</a>
   </blockquote>
@@ -38,7 +40,6 @@
   <br>
 
   <!-- Link back to homepage -->
-  <a href="index.html">Back to Home</a>
+  <a href="index.html">← Back to Homepage</a>
 </body>
 </html>
-
