--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,25 +6,38 @@
   <title>My First Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to My First Portfolio</h1>
-  <p>Hello! This is my very first webpage built with HTML. I’m learning how to structure content properly using semantic HTML tags.</p>
-  <p>Each day, I’m getting better at writing cleaner and more accessible code that works well on all devices.</p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h2>About Me</h2>
-  <p>I’m passionate about web development and enjoy creating projects that help me learn and grow. This portfolio will showcase my progress and creativity.</p>
+  <main>
+    <article>
+      <h1>Welcome to My First Portfolio</h1>
+      <p>Hello! This is my very first webpage built with HTML. I’m learning how to structure content properly using semantic HTML tags.</p>
+      <p>Each day, I’m getting better at writing cleaner and more accessible code that works well on all devices.</p>
 
-  <h3>What’s Next</h3>
-  <p>Stay tuned for more updates as I continue building cool web pages and linking them together!</p>
+      <h2>About Me</h2>
+      <p>I’m passionate about web development and enjoy creating projects that help me learn and grow. This portfolio will showcase my progress and creativity.</p>
 
-  <!-- Clickable Image -->
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
+      <h3>What’s Next</h3>
+      <p>Stay tuned for more updates as I continue building cool web pages and linking them together!</p>
 
-  <br><br>
+      <!-- Clickable Image -->
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+    </article>
 
-  <!-- Link to Tweets Page -->
-  <a href="tweets.html">Check out my Tweets</a>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Esther Muchai - <a href="https://www.alxafrica.com/" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
-
