--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,28 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Portfolio</title>
+  <title>My Tweets</title>
 </head>
 <body>
-  <h1>Welcome to My First Portfolio</h1>
-  <p>Hello! This is my very first webpage built with HTML. I’m learning how to structure content properly using semantic HTML tags.</p>
-  <p>Each day, I’m getting better at writing cleaner and more accessible code that works well on all devices.</p>
-  <a href="tweets.html">Check out my Tweets →</a>  
-  <h1>My Tweets</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <!-- Embedded Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">
-      Learning HTML is fun and powerful! #WebDevelopment
-    </p>
-    &mdash; Example User (@example)
-    <a href="https://twitter.com/example/status/1234567890123456789">March 1, 2025</a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <main>
+    <article>
+      <h1>My Tweets</h1>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Learning HTML is fun and powerful! #WebDevelopment</p>
+        &mdash; Example User (@example)
+        <a href="https://twitter.com/example/status/1234567890123456789">March 1, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </article>
 
-  <br>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <!-- Link back to homepage -->
-  <a href="index.html">← Back to Homepage</a>
+  <footer>
+    <p>Made by Esther Muchai - <a href="https://www.alxafrica.com/" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
