Create initial personal portfolio webpage

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Esther Muchai - Personal Portfolio</title>
+</head>
+<body>
+  <!-- ===== HEADER ===== -->
+  <header>
+    <h1>Esther Muchai</h1>
+    <p>Junior SAP BI Consultant | Aspiring Data & Tech Professional | Lover of Growth and Creativity</p>
+  </header>
+
+  <!-- ===== NAVIGATION BAR ===== -->
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- ===== INTRODUCTION SECTION ===== -->
+  <section id="introduction">
+    <h2>Introduction</h2>
+    <p>Hello! I’m Esther, a passionate junior SAP BI consultant with a keen interest in analytics, problem-solving, and turning data into meaningful insights. I love learning, creating, and challenging myself to grow every day—both personally and professionally.</p>
+  </section>
+
+  <!-- ===== PROJECTS SECTION ===== -->
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <article class="project">
+      <h3>KEMSA SAP BI Project</h3>
+      <p>Contributed to the full SAP BI lifecycle, including ABAP development, data modeling, and dashboard creation. Supported training and user acceptance testing phases.</p>
+      <a href="https://www.sap.com/" target="_blank">View Project</a>
+    </article>
+
+    <article class="project">
+      <h3>Service Provider Platform (TaskRabbit-style)</h3>
+      <p>Developing a web platform that connects users with trusted service providers for everyday tasks, using Next.js for the front-end and modern database integration.</p>
+      <a href="https://github.com/" target="_blank">View on GitHub</a>
+    </article>
+
+    <article class="project">
+      <h3>Girly Glow Skincare Brand</h3>
+      <p>Founded a premium self-care brand focused on helping women embrace softness and glow. Responsible for brand strategy, content, and digital marketing.</p>
+      <a href="https://www.instagram.com/girlyglow.ke" target="_blank">View Brand</a>
+    </article>
+  </section>
+
+  <!-- ===== ABOUT ME SECTION ===== -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I’m a lifelong learner who enjoys technology, business, and creative expression. My journey has been shaped by curiosity, consistency, and a desire to make an impact through my work.</p>
+    <ul>
+      <li>🌍 Based in Kenya</li>
+      <li>💻 Skilled in SAP BI, ABAP, and data analytics</li>
+      <li>💡 Interested in tech, entrepreneurship, and content strategy</li>
+      <li>📚 Always learning — currently pursuing SAP certification</li>
+    </ul>
+  </section>
+
+  <!-- ===== CONTACT SECTION ===== -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Let’s connect! You can reach me through:</p>
+    <ul>
+      <li>Email: <a href="mailto:esther.muchai@example.com">esther.muchai@example.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/esthermuchai" target="_blank">linkedin.com/in/esthermuchai</a></li>
+      <li>GitHub: <a href="https://github.com/esthermuchai" target="_blank">github.com/esthermuchai</a></li>
+    </ul>
+  </section>
+
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <p>&copy; 2025 Esther Muchai</p>
+  </footer>
+</body>
+</html>
 
